--- a/Readme
+++ b/Readme
@@ -5,6 +5,6 @@ Dell PowerStore 存储性能监控
 根据官网RestAPI文档，存储级别性能指标的最小间隔粒度为20秒
 
 This is a demo written by Go language.
-这个示例仅作为可能性验证，采用Go语言编写
+这个示例仅作为可行性验证，采用Go语言编写
 
 QD888
