--- a/Readme
+++ b/Readme
@@ -1,12 +1,16 @@
 Dell Storage PowerStore Performance Monitoring
-Storage level performance metrics with 20s intervals
-
 Dell PowerStore 存储性能监控
+
+Storage level performance metrics with 20s intervals
 根据官网RestAPI文档，存储级别性能指标的最小间隔粒度为20秒
 
 https://github.com/QD888/PowerStore-Perf-20s/blame/main/PowerStore%20Performance-20s.mp4
 
-This is a demo written by Go language.
+This is a demo written with Go language.
 这个示例仅作为可行性验证，采用Go语言编写
 
+If PowerStore performance can be monitored with seconds level, what you think about PowerMax and Unity?
+如果PowerStore可以做到秒级的性能监控，那么PowerMax和Unity同样可以做到。
+
 QD888
+2023.7.27
